--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
-      <link rel="stylesheet" href="assets/css/style.css">
-      <script src="assets/JavaScript/script.js" defer></script>
+<!DOCTYPE html>
+<html lang="en">
 
-      <title> Workshop Group 4 </title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <script src="assets/JavaScript/script.js" defer></script>
 
-  </head>
+  <title> Workshop Group 4 </title>
 
-  <body>
+</head>
+
+<body>
 
   <!-- .......................... Random Array - Movie.......................... -->
-  
-<div class="Images">
-  <div class="films">
-   <img id="img_movie" width="200"></img>
+
+  <div class="Images">
+    <img src="images/8img-7.jpg" width=200px>
+    <div class="films">
+      <img id="img_movie" width="200"></img>
+    </div>
+
+    <div class="Snack">
+      <img id="my_Snack" width="200"></img>
+
+    </div>
   </div>
+</body>
 
-  <div class="Snack">
-    <img id="my_Snack" width="200"></img>
+</html>
 
-   </div>
-</div>
-  </body>
-  </html>
-
-  <!-- .......................... Joana Borges  22/02/2021 .......................... -->
+<!-- .......................... Joana Borges  22/02/2021 .......................... -->
