--- a/index.html
+++ b/index.html
@@ -15,18 +15,17 @@
 <body>
 
   <!-- .......................... Random Array - Movie.......................... -->
-
-  <div class="Images">
+  <div class="Grid-img">
+  <div class="Images1">
     <img src="images/8img-7.jpg" width=200px>
-    <div class="films">
-      <img id="img_movie" width="200"></img>
-    </div>
-
-    <div class="Snack">
-      <img id="my_Snack" width="200"></img>
-
-    </div>
   </div>
+  <div class="Images2">
+    <img src="images/8img-7.jpg" width=200px>
+  </div>
+  <div class="Images3">
+    <img src="images/8img-7.jpg" width=200px>
+  </div>
+</div>
 </body>
 
 </html>
