--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <!-- .......................... Random Array - Movie.......................... -->
-  <div class="Grid-img">
+ <!-- <div class="Grid-img">
   <div class="Images1">
     <img src="images/8img-7.jpg" width=200px>
 
@@ -27,8 +27,52 @@
     <img src="images/8img-7.jpg" width=200px>
   </div>   
 </div>
-</body>
+</body> -->
 
-</html>
+<!-- The four columns -->
+<div class="row">
+  <div class="column">
+    <img src="images/img-1.jpg" alt="Nature" style="width:90%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="images/img-2.jpg" alt="Snow" style="width:90%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="images/img-3.jpg" alt="Mountains" style="width:90%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="images/img-4.jpg" alt="Nature" style="width:90%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="images/img-5.jpg" alt="Snow" style="width:90%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="images/img-6.jpg" alt="Mountains" style="width:90%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="images/img-7.jpg" alt="Nature" style="width:90%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="images/img-8.jpg" alt="Snow" style="width:90%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="images/img-8.jpg" alt="Snow" style="width:90%" onclick="myFunction(this);">
+  </div>
+</div> 
+
+ <div class="container">
+  <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+  <img id="expandedImg" style="width:100%">
+  <div id="imgtext"></div>
+</div> 
+
+</html> 
 
 <!-- .......................... Joana Borges  22/02/2021 .......................... -->
+
+
+<!-- <div style="text-align:center">
+  <h2>Tabbed Image Gallery</h2>
+  <p>Click on the images below:</p>
+</div> -->
+
