--- a/index.html
+++ b/index.html
@@ -31,39 +31,39 @@
 
 <!-- The four columns -->
 <div class="row">
-  <div class="column">
-    <img src="images/img-1.jpg" alt="Nature" style="width:90%" onclick="myFunction(this);">
+  <div class="img1">
+    <img src="images/img-1.jpg" alt="Nature" style="width:50%" onclick="myFunction(this);">
   </div>
-  <div class="column">
-    <img src="images/img-2.jpg" alt="Snow" style="width:90%" onclick="myFunction(this);">
+  <div class="img2">
+    <img src="images/img-2.jpg" alt="Snow" style="width:50%" onclick="myFunction(this);">
   </div>
-  <div class="column">
-    <img src="images/img-3.jpg" alt="Mountains" style="width:90%" onclick="myFunction(this);">
+  <div class="img3">
+    <img src="images/img-3.jpg" alt="Mountains" style="width:50%" onclick="myFunction(this);">
   </div>
-  <div class="column">
-    <img src="images/img-4.jpg" alt="Nature" style="width:90%" onclick="myFunction(this);">
+  <div class="img4">
+    <img src="images/img-4.jpg" alt="Nature" style="width:50%" onclick="myFunction(this);">
   </div>
-  <div class="column">
-    <img src="images/img-5.jpg" alt="Snow" style="width:90%" onclick="myFunction(this);">
+  <div class="img5">
+    <img src="images/img-5.jpg" alt="Snow" style="width:50%" onclick="myFunction(this);">
   </div>
-  <div class="column">
-    <img src="images/img-6.jpg" alt="Mountains" style="width:90%" onclick="myFunction(this);">
+  <div class="img6">
+    <img src="images/img-6.jpg" alt="Mountains" style="width:50%" onclick="myFunction(this);">
   </div>
-  <div class="column">
-    <img src="images/img-7.jpg" alt="Nature" style="width:90%" onclick="myFunction(this);">
+  <div class="img7">
+    <img src="images/img-7.jpg" alt="Nature" style="width:50%" onclick="myFunction(this);">
   </div>
-  <div class="column">
-    <img src="images/img-8.jpg" alt="Snow" style="width:90%" onclick="myFunction(this);">
+  <div class="img8">
+    <img src="images/img-8.jpg" alt="Snow" style="width:50%" onclick="myFunction(this);">
   </div>
-  <div class="column">
-    <img src="images/img-8.jpg" alt="Snow" style="width:90%" onclick="myFunction(this);">
+  <div class="img9">
+    <img src="images/img-9.jpg" alt="Snow" style="width:50%" onclick="myFunction(this);">
   </div>
 </div> 
 
  <div class="container">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-  <img id="expandedImg" style="width:100%">
-  <div id="imgtext"></div>
+  <img id="expandedImg" style="width:50%">
+ 
 </div> 
 
 </html> 
