--- a/index.html
+++ b/index.html
@@ -14,21 +14,6 @@
 
 <body>
 
-  <!-- .......................... Random Array - Movie.......................... -->
- <!-- <div class="Grid-img">
-  <div class="Images1">
-    <img src="images/8img-7.jpg" width=200px>
-
-  </div>
-  <div class="Images2">
-    <img src="images/8img-7.jpg" width=200px>
-  </div>
-  <div class="Images3">
-    <img src="images/8img-7.jpg" width=200px>
-  </div>   
-</div>
-</body> -->
-
 <!-- The four columns -->
 <div class="row">
   <div class="img1">
@@ -58,21 +43,19 @@
   <div class="img9">
     <img src="images/img-9.jpg" alt="Snow" style="width:50%" onclick="myFunction(this);">
   </div>
-</div> 
+
 
  <div class="container">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
   <img id="expandedImg" style="width:50%">
- 
-</div> 
 
+</div> 
+</div> 
+</body>
 </html> 
 
 <!-- .......................... Joana Borges  22/02/2021 .......................... -->
 
 
-<!-- <div style="text-align:center">
-  <h2>Tabbed Image Gallery</h2>
-  <p>Click on the images below:</p>
-</div> -->
+<!-- <> -->
 
